--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "umi-plugin-route-mdx",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "templates"
   ],
   "scripts": {
     "start": "cd demo && umi dev",
@@ -25,7 +26,9 @@
   "dependencies": {
     "@mdx-js/loader": "^2.2.1",
     "@mdx-js/react": "^2.3.0",
+    "@umijs/utils": "^4.0.57",
     "hast": "^1.0.0",
+    "react-markdown": "^8.0.5",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-external-links": "^2.0.1",
     "rehype-prism-plus": "^1.5.1",
